@@ -8,6 +8,7 @@ import_netcdf
 tests = {'test_netcdf_constant',...
          'test_netcdf_create'...
          'test_netcdf_low_level_interface'...
+         'test_netcdf_unlim',...         
          'test_netcdf_datatypes'...
          'test_netcdf_scalar_variable'...
          'test_netcdf_attributes'...
